# Kafka_MongoDB

./: README.md  docker-compose.yml  pyproject.toml
consumer/: Dockerfile  app.py
producer/: Dockerfile  app.py
