[project]
name = "kafka-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Allen",email = "liallen865@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymongo (>=4.13.0,<5.0.0)",
    "confluent-kafka (>=2.10.0,<3.0.0)",
    "cryptography (>=45.0.2,<46.0.0)",
    "kafka-python (>=2.2.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
